xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__abbreviated_forward_step_attr.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"@foo\")"
---
Ok(Path(PathExpr(
  steps: [
    AxisStep(AxisStep(
      axis: Attribute,
      node_test: NameTest(Name(Name(
        name: "foo",
        prefix: None,
        namespace: None,
      ))),
      predicates: [],
    )),
  ],
)))
