xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__arrow_function_static_with_placeholder.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "parse_xpath_simple(\"'$' => fn:concat(?)\")"
---
Ok(XPath(Expr([
  Path(PathExpr(
    steps: [
      PrimaryExpr(InlineFunction(InlineFunction(
        params: [
          Param(
            name: Name(
              name: "placeholder0",
              prefix: None,
              namespace: None,
            ),
            type_: None,
          ),
        ],
        return_type: None,
        body: Some(Expr([
          Path(PathExpr(
            steps: [
              PrimaryExpr(FunctionCall(FunctionCall(
                name: Name(
                  name: "concat",
                  prefix: Some("fn"),
                  namespace: Some("http://www.w3.org/2005/xpath-functions"),
                ),
                arguments: [
                  Path(PathExpr(
                    steps: [
                      PrimaryExpr(Literal(String("$"))),
                    ],
                  )),
                  Path(PathExpr(
                    steps: [
                      PrimaryExpr(VarRef(Name(
                        name: "placeholder0",
                        prefix: None,
                        namespace: None,
                      ))),
                    ],
                  )),
                ],
              ))),
            ],
          )),
        ])),
        wrapper: true,
      ))),
    ],
  )),
])))
