xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__attribute_test_name_arg_type_arg.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"self::attribute(foo, bar)\")"
---
Ok(Path(PathExpr(
  steps: [
    AxisStep(AxisStep(
      axis: Self_,
      node_test: KindTest(Attribute(Some(ElementOrAttributeTest(
        name_or_wildcard: Name(Name(
          name: "foo",
          prefix: None,
          namespace: None,
        )),
        type_name: Some(TypeName(
          name: Name(
            name: "bar",
            prefix: None,
            namespace: None,
          ),
          can_be_nilled: true,
        )),
      )))),
      predicates: [],
    )),
  ],
)))
