xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__attribute_test_star_arg.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"self::attribute(*)\")"
---
Ok(Path(PathExpr(
  steps: [
    AxisStep(AxisStep(
      axis: Self_,
      node_test: KindTest(Attribute(Some(AttributeTest(
        attrib_name_or_wildcard: Wildcard,
        type_name: None,
      )))),
      predicates: [],
    )),
  ],
)))
